--- a/pom.xml
+++ b/pom.xml
@@ -107,11 +107,11 @@
             <version>2.5.0</version>
             <scope>compile</scope>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/net.md-5/bungeecord-api -->
         <dependency>
             <groupId>net.md-5</groupId>
             <artifactId>bungeecord-api</artifactId>
-            <version>1.16-R0.2-SNAPSHOT</version>
-            <type>jar</type>
+            <version>1.16-R0.3</version>
             <scope>provided</scope>
         </dependency>
         <dependency>
