--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>com.imaginarycode.minecraft</groupId>
     <artifactId>RedisBungee</artifactId>
-    <version>0.6.4</version>
+    <version>0.6.5</version>
 
     <repositories>
         <repository>
@@ -80,6 +80,10 @@
                                     <pattern>okio</pattern>
                                     <shadedPattern>com.imaginarycode.minecraft.redisbungee.internal.okio
                                     </shadedPattern>
+                                </relocation>
+                                <relocation>
+                                    <pattern>org.slf4j</pattern>
+                                    <shadedPattern>com.imaginarycode.minecraft.redisbungee.internal.slf4j</shadedPattern>
                                 </relocation>
                             </relocations>
                         </configuration>
